# GoL

./: Zadanie3.txt  board.cpp  board.h  engine.h  gol3.cpp  heapsort_algorytm.txt  turystyka.txt  txt.cpp  txt.h  zadanie2.txt  zadanie3_1.txt  zadanie4.txt  zadanie_4_1.txt  zajecia1_1003.txt
GameOfLife_Clion/: CMakeLists.txt  api_window.cpp  api_window.h  board.cpp  board.h  engine.h  main.cpp  txt.cpp  txt.h
turystyka/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj
turystyka/ConsoleApplication1/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  ConsoleApplication1.vcxproj.FileListAbsolute.txt  vc142.idb
turystyka/ConsoleApplication1/Debug/ConsoleA.7687fe59.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
